--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: [Tidytuesdays]
+title: [Oranwutang's Tidytuesdays]
 description: [My contributions to the tidytuesday challenge]
