--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
 theme: jekyll-theme-minimal
 title: [Oranwutang's Tidytuesdays]
 description: [My contributions to the tidytuesday challenge]
+
+# Social
+analytics-id:       "default"
+twitter:            @oranwutan
+
