--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,5 @@ description: [My contributions to the tidytuesday challenge]
 
 # Social
 analytics-id:       "default"
-twitter:            @oranwutan
-
+twitter:            "@oranwutan"
+github:             "https://github.com/oranwutang"
